syntax = "proto3";

package spectrum_protocol;

////////////////////////////////////////////////////////////////////////////////
// Secure Protocol
////////////////////////////////////////////////////////////////////////////////

message Share {
  repeated bytes data = 1;
}

message SecureWriteToken {
  message DpfKey {
    bytes encoded_msg = 1;
    // Might be a vector of bits or vector of encodings of bits.
    repeated bytes bits = 2;
    repeated bytes seeds = 3;
  }

  message ProofShare {
    bytes bit = 1;
    bytes seed = 2;
  }

  DpfKey key = 1;
  ProofShare proof = 2;
}

message SecureAuditShare {
  bytes bit = 1;
  bytes seed = 2;
  bytes data = 3;
}


message WriteToken {
  oneof inner {
    SecureWriteToken secure = 2;
  }
}

// what workers exchange to collaboratively verify shares
message AuditShare {
  oneof inner {
    SecureAuditShare secure = 2;
  }
}
